--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,44 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
-    --primary-color: #22223b;
+  --primary-color: #22223b;
 }
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+}
+*::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #ccc;
 }
 ::placeholder {
-    color: #cccccc;
+  color: #cccccc;
 }
 html {
-    font-size: 62.5%;
-    box-sizing: border-box;
+  font-size: 62.5%;
+  box-sizing: border-box;
 }
 body {
-    max-width: 1400px;
-    margin: 0 auto;
-    background-color: var(--primary-color);
+  max-width: 1400px;
+  margin: 0 auto;
+  background-color: var(--primary-color);
 }
 button {
-    border: none;
-    cursor: pointer;
-} 
+  border: none;
+  cursor: pointer;
+}
 input {
-    border: none;
-    outline: none;
+  border: none;
+  outline: none;
 }
 a {
-    text-decoration: none;
-    color: #fff;
-    transition: .3s;
+  text-decoration: none;
+  color: #fff;
+  transition: 0.3s;
 }
 img {
-    display: block;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-
-
