--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,13 +4,13 @@
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: var(--primary-color);
+    background-color: var(--background-primary);
     padding: 12px 0;
     max-width: 1400px;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
     z-index: 9999;
-    gap: 20px;
+    gap: 12px;
 }
 .logo {
     padding: 8px 0;
@@ -23,8 +23,8 @@
     display: flex;
 }
 .menu-header__item {
-    font-size: 1.6rem;
-    padding: 8px 16px;
+    font-size: 1.8rem;
+    padding: 8px 12px;
     cursor: pointer;
     transition: .3s;
 }
@@ -51,5 +51,11 @@
     font-size: 1.8rem;
     border-radius: 0 6px 6px 0;
     background-color: #4a4e69;
-    color: #fff
+    color: #fff;
+    transition: .3s;
 }
+
+.search button:hover {
+    background-color: #5d6282;
+}
+
