--- a/assets/css/infoMovie.css
+++ b/assets/css/infoMovie.css
@@ -35,6 +35,7 @@
     border-radius: 4px;
     background-color: #ff006e;
     transition: .3s;
+    user-select: none;
 }
 
 .info-bottom a:hover {
@@ -50,12 +51,11 @@
 }
 
 .information-movie {
-    margin-top: 32px;
+    margin: 32px 0;
     color: #fff;
     display: flex;
     flex-direction: column;
     gap: 12px;
-    margin-bottom: 100px;
     font-size: 2rem;
 }
 
