--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,8 +7,6 @@
     background-color: var(--background-primary);
     padding: 12px 0;
     max-width: 1400px;
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(10px);
     z-index: 9999;
     gap: 12px;
 }
@@ -25,14 +23,15 @@
 }
 .menu-header__item {
     font-size: 1.8rem;
-    padding: 8px 12px;
-    transition: .3s;
+    transition: .3s all ease;
     color: #fff;
     position: relative;
     user-select: none;
 }
 
 .menu-header__item > a {
+    display: block;
+    padding: 8px 12px;
     cursor: pointer;
 } 
 
@@ -40,12 +39,16 @@
     margin-left: 2px;
 }
 
+.menu-header__item:hover {
+    outline: 1px dotted #ffbe0b;
+}
+
 .menu-header__item:hover > a,
 .menu-header__item:hover > a > i {
     color: #ffbe0b;
 }
 
-.menu-header__item:nth-child(4):after, 
+.menu-header__item:nth-child(6):after, 
 .menu-header__item:nth-child(5):after {
     content: '';
     position: absolute;
@@ -54,7 +57,7 @@
     top: 80%;
     left: 0;
     background-color: transparent;
-    z-index: 99;
+    z-index: 9999;
     cursor: pointer;
 }
 
@@ -62,24 +65,14 @@
     display: flex;
 }
 
-.item__list::after {
-    z-index: 100;
-    content: "";
-    position: absolute;
-    transform: translateX(-50%);
-    cursor: pointer;
-    top: -24px;
-    left: 32px;
-    border-width: 12px;
-    border-style: solid;
-    border-color: transparent transparent #313150 transparent;
-}
-
 .item__list {
-    width: 450px;
+    width: 600px;
+    max-height: 80vh;
+    overflow-y: auto;
+    overscroll-behavior-y: none;
     display: none;
     flex-wrap: wrap;
-    gap: 12px 20px;
+    gap: 12px;
     list-style: none;
     padding: 16px;
     background-color: #313150;
@@ -87,17 +80,22 @@
     position: absolute;
     top: 50px;
     z-index: 100;
-    transition: .5s;
 }
 .item__list > li {
     width: calc(33.3333% - 14px);
-    transition: .3s;
     font-size: 1.6rem;
     cursor: pointer;
 }
 
-.item__list > li:hover a{
+.item__list > li a {
+    display: block;
+    transition: .3s;
+    padding: 4px 12px;
+}
+
+.item__list > li a:hover {
     color: #ffbe0b;
+    outline: 1px dotted;
 }
 
 .search {
@@ -107,12 +105,17 @@
 }
 
 .search input {
-    width: 300px;
+    width: 400px;
     background-color: #4a4e69;
     padding: 8px 16px;
     font-size: 1.6rem;
     color: #fff;
     border-radius: 6px 0 0 6px;
+}
+
+.search input:focus, 
+.search input:focus ~ button {
+    outline: 1px solid;
 }
 
 .search button {
@@ -121,7 +124,7 @@
     border-radius: 0 6px 6px 0;
     background-color: #4a4e69;
     color: #fff;
-    transition: .3s;
+    transition: background .3s;
 }
 
 .search button:hover {
@@ -132,35 +135,18 @@
     display: none;
     font-size: 3rem;
     color: #fff;
-    padding: 0;
+    cursor: pointer;
 }
 
 .close {
+    display: none;
     position: absolute;
-    right: 0;
-    top: 8px;
     color: #fff;
     font-size: 4rem;
-    z-index: 999;
+    z-index: 10000;
+    cursor: pointer;
 }
 
-.menu-header.mobile.active {
-    opacity: 1;
-    transform: translateX(0);
-}
 
-.menu-header.mobile {
-    display: flex;
-    position: fixed;
-    inset: 0;
-    height: 100vh;
-    opacity: 0;
-    transform: translateX(-100%);
-    overflow-y: auto;
-    background-color: #22223b;
-    padding: 16px 0;
-    flex-direction: column;
-    transition: .3s all linear;
-}
 
 
