--- a/assets/css/toastMessage.css
+++ b/assets/css/toastMessage.css
@@ -8,12 +8,12 @@
 .toast {
     display: flex;
     align-items: center;
-    padding: 16px;
+    padding: 8px 12px;
     border: 2px solid;
     border-radius: 12px;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
-    margin-bottom: 24px;
-    width: 400px;
+    margin-bottom: 12px;
+    width: 350px;
 }
 
 @keyframes slideInLeft {
