--- a/src/components/header.html
+++ b/src/components/header.html
@@ -94,9 +94,9 @@
         </ul>
     </div>
     <div class="menu-header__item">
-       <a>Quốc gia
+        <a>Quốc gia
             <i class="fa-regular fa-chevron-down"></i>
-       </a>
+        </a>
         <ul class="item__list">
             <li>
                 <a class="change-page" data-api="https://phimapi.com/v1/api/quoc-gia/trung-quoc">Trung Quốc</a>
@@ -234,12 +234,12 @@
                 <a class="change-page" data-api="https://phimapi.com/v1/api/quoc-gia/singapore">Singapore</a>
             </li>
         </ul>
-        
-    </div>    
+    </div>
 </div>
 <div class="search">
-    <input type="text" placeholder="Tìm kiếm...">
+    <input type="text" placeholder="Tìm kiếm..." />
     <button>
         <i class="fa-light fa-magnifying-glass"></i>
     </button>
 </div>
+
