--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -22,7 +22,7 @@
     display: flex;
 }
 .menu-header__item {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     transition: .3s all ease;
     color: #fff;
     position: relative;
@@ -48,8 +48,8 @@
     color: #ffbe0b;
 }
 
-.menu-header__item:nth-child(6):after, 
-.menu-header__item:nth-child(5):after {
+.menu-header__item:nth-child(7):after, 
+.menu-header__item:nth-child(6):after {
     content: '';
     position: absolute;
     width: 100%;
@@ -82,7 +82,7 @@
     z-index: 100;
 }
 .item__list > li {
-    width: calc(33.3333% - 14px);
+    width: calc(33.3333% - 8px);
     font-size: 1.6rem;
     cursor: pointer;
 }
@@ -102,23 +102,20 @@
     flex: 1;
     display: flex;
     justify-content: end;
+    position: relative;
 }
 
 .search input {
     width: 400px;
     background-color: #4a4e69;
-    padding: 8px 16px;
+    padding: 8px 32px 8px 16px;
     font-size: 1.6rem;
     color: #fff;
     border-radius: 6px 0 0 6px;
 }
 
-.search input:focus, 
-.search input:focus ~ button {
-    outline: 2px solid;
-}
 
-.search button {
+.search-btn {
     width: 40px;
     font-size: 1.8rem;
     border-radius: 0 6px 6px 0;
@@ -127,8 +124,30 @@
     transition: background .3s;
 }
 
-.search button:hover {
+.search-btn:hover {
     background-color: #5d6282;
+}
+
+.search input:focus ~ .reset-value {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.reset-value {
+    cursor: text;
+    opacity: 0;
+    position: absolute;
+    background-color: transparent;
+    color: #fff;
+    font-size: 1.8rem;
+    top: 50%;
+    right: 50px;
+    transform: translateY(-50%);
+    transition: .3s;
+}
+
+.reset-value:hover {
+    color: #ffbe0b;
 }
 
 .bars {
