--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -24,6 +24,7 @@
 }
 
 .prev, .next {
+    border: 1px solid rgba(255,255,255,.5);
     position: absolute;
     top: 50%;
     transform: translateY(-50%);    
