cập nhật giao diện

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -97,6 +97,7 @@ img {
     cursor: pointer;
     border-radius: 3px;
     transition: .3s;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .page:hover {
@@ -158,6 +159,8 @@ img {
     border-radius: 3px;
     font-size: 1.6rem;
     transition: .3s;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    user-select: none;
 }
 
 .watch-now:hover {
@@ -170,6 +173,7 @@ img {
     padding: 2px 4px;
     background-color:#3a86ff;
     border-radius: 2px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 
