--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -41,9 +41,11 @@
     display: flex;
     padding: 6px 12px;
     width: unset;
+    opacity: 1;
     position: unset;
     background-color: unset;
     max-height: unset;
+    box-shadow: unset;
   }
   .menu-header__item:nth-child(6):after,
   .menu-header__item:nth-child(5):after {
