--- a/assets/css/toastMessage.css
+++ b/assets/css/toastMessage.css
@@ -13,7 +13,7 @@
     border-radius: 12px;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
     margin-bottom: 12px;
-    width: 350px;
+    width: 400px;
 }
 
 @keyframes slideInLeft {
@@ -59,6 +59,7 @@
     width: 28px;
     height: 28px;
     padding: 8px;
+    font-size: 1.6rem;
     border-radius: 8px;
     margin: 0 18px 18px 0;
 }
@@ -69,13 +70,13 @@
 }
 
 .toast__title {
-    font-size: 18px;
+    font-size: 1.8rem;
     color: #27303A;
     margin-bottom: 2px;
 }
 
 .toast__message {
-    font-size: 16px;
+    font-size: 1.6rem;
     color: #2F3F53;
 }
 
@@ -91,14 +92,15 @@
 }
 
 .toast__close {
-    font-size: 28px;
+    font-size: 2.8rem;
     transition: .3s;
-    color: #979FA9;
+    color: #22223b;
     margin: 0 0 22px 18px;
     cursor: pointer;
+    transition: .3s;
 }
 
 .toast__close:hover {
-    color: #27303A;
+    opacity: .8;
 }
 
