--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -185,10 +185,10 @@
     padding: 8px;
   }
   .toast__title {
-    font-size: 1.6rem;
-  }
-  .toast__message.toast--success {
     font-size: 1.4rem;
+  }
+  .toast__message {
+    font-size: 1.3rem;
   }
   .prev {
     left: 4px;
