--- a/assets/css/toastMessage.css
+++ b/assets/css/toastMessage.css
@@ -33,7 +33,8 @@
     }
 }
 
-.toast--success {
+.toast--success, 
+.toast--welcome {
     background-color: #F6FFF9;
     border-color: #48C1B5;
 }
@@ -43,7 +44,9 @@
     border-color: #F4B0A1;
 }
 
-.toast--success .toast__icon {
+
+.toast--success .toast__icon,
+.toast--welcome .toast__icon {
     background-image: linear-gradient(to bottom, #48CA93, #48BACA);
 }
 
